--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -63,3 +63,24 @@ body{
 .navbar-inverse .navbar-nav .open .dropdown-menu > li > a:focus {
     color: #000000;
 }
+
+.carousel {
+    background: #1A237E;
+}
+
+.carousel .item {
+    height: 300px;
+}
+
+.item img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-height: 300px;
+}
+
+#carouselButtons {
+    right: 0px;
+    position: absolute;
+    bottom: 0px;
+}
